Quick fix title alignment

--- a/src/scss/_partials/_layouts.scss
+++ b/src/scss/_partials/_layouts.scss
@@ -15,6 +15,7 @@
   font-size: var(--font-xxxlarge);
   display: flex;
   justify-content: center;
+  text-align: center;
   user-select: none;
   margin-bottom: 15px;
 }
